package com.codechads.interfaces;

public interface IExportable {
    void exportarDatos();
}
