package com.codechads.interfaces;

public interface IReportable {
    void generarReporte();
}
